--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:55922",
+      "applicationUrl": "http://assignment.autos:80",
       "sslPort": 44309
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5019",
+      "applicationUrl": "http://assignment.autos:80",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7174;http://localhost:5019",
+      "applicationUrl": "http://assignment.autos:80;http://assignment.autos:80",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
