--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "OurHeroConnectionString": "Data Source=LAPTOP-4TSM9SDC;Initial Catalog=OurHeroDB; Integrated Security=true;TrustServerCertificate=True;",
-    "DockerConnectionString": "Host=localhost;database=WebAPI;username=postgres;password=postgres"
+    "DockerConnectionString": "Host=localhost;database=postgres;username=postgres;password=postgres"
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
